--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <div class="hero container">
         <div class="container-size">
             <h1 class="hero-title">Happy Birth day!</h1>
-    
-             <p class="hero-discription">Today you are 27, but soon will be 3<img class="icons" src="./imadge/clarity_alarm-clock-outline-badged.png" alt="clock" width="19" height="19"></img></p>
         </div>
+
+        <div class="cintainer-size-2">
+             <p class="hero-discription">Today you are 27, but soon will be 3
+                <img class="icons" src="./imadge/clarity_alarm-clock-outline-badged.png" alt="clock" width="30" height="30"></img>
+            </p>
+        </div>
+
         <div class="flex-img">
-            <img class="img" src="./imadge/grandmother.png" alt="grandmother" width="227" height="302">
-            <img class="img-pult" src="./imadge/pult.png" alt="pult" width="120" height="111">
+            <img class="img" src="./imadge/grandmother.png" alt="grandmother" width="260" height="400">
+            <img class="img-pult" src="./imadge/pult.png" alt="pult" width="150" height="150">
         </div>
         <button class="btn" type="button" data-modal-open >PUSH</button>
     </div>
@@ -41,7 +46,7 @@
             </div>
             <div class="img-size">
                 <img class="modal2-svg" src="./imadge/openmoji_plaster.svg" alt="plaster">
-                <img class="modal2-img" src="./imadge/starushki.jpg" alt="starushk" width="216" height="194">
+                <img class="modal2-img" src="./imadge/starushki.jpg" alt="starushk" width="269" height="235">
                 <p class="modal2-paragraph" >Let’s celebrate your 80 together</p>
             </div>
     
