--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="cintainer-size-2">
              <p class="hero-discription">Today you are 27, but soon will be 3
-                <img class="icons" src="./imadge/clarity_alarm-clock-outline-badged.png" alt="clock" width="30" height="30"></img>
+                <img class="icons" src="./imadge/clarity_alarm-clock-outline-badged.svg" alt="clock" width="30" height="30"></img>
             </p>
         </div>
 
@@ -48,6 +48,7 @@
                 <img class="modal2-svg" src="./imadge/openmoji_plaster.svg" alt="plaster">
                 <img class="modal2-img" src="./imadge/starushki.jpg" alt="starushk" width="269" height="235">
                 <p class="modal2-paragraph" >Let’s celebrate your 80 together</p>
+                <canvas></canvas>
             </div>
     
         </div>
@@ -56,6 +57,7 @@
 
     <script src="./index.js/modal.js" type="module"></script>
     <script src="./index.js/last-modal.js" type="module"></script>
+    <script src="./index.js/salut.js" type="module"></script>
 
 </body>
 </html>
