--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/styile.css">
     <link href="//db.onlinewebfonts.com/c/0c882b5dadf75021f479c43aedb42f28?family=SoapW00-Shirt" rel="stylesheet"
-        type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+        
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +20,7 @@
 
         <div class="cintainer-size-2">
              <p class="hero-discription">Today you are 27, but soon will be 3
-                <img class="icons" src="./imadge/clarity_alarm-clock-outline-badged.svg" alt="clock" width="30" height="30"></img>
+                <img class="icons animate__animated animate__tada animate__infinite	" src="./imadge/clarity_alarm-clock-outline-badged.svg" alt="clock" width="30" height="30"></img>
             </p>
         </div>
 
@@ -25,15 +28,20 @@
             <img class="img" src="./imadge/grandmother.png" alt="grandmother" width="260" height="400">
             <img class="img-pult" src="./imadge/pult.png" alt="pult" width="150" height="150">
         </div>
-        <button class="btn" type="button" data-modal-open >PUSH</button>
+        <button class="btn animate__animated animate__flash animate__infinite animate__slower" type="button" data-modal-open >PUSH</button>
     </div>
 
     <div class="container backdrop is-hidden" data-modal>
+
+        
         <div class="modal">
-            <p class="modal-discription">Дорогенька, я тобі бажаю бути сміливою проживати життя, про яке мріяла, хай попереду буде багато приємних вражень,
-            коханих людей і нових перемог(зверни увагу бабуся на малюнку, здається вона вміє плавати, ні на що не натякую), живи,
-            радій, пробуй щось нове і ніколи не втомляйся дивуватися і насолоджуватися життям!</p>
-            <button type="button" class="btn-modal" data-modal-open2 >PUSH</button>
+            <p class="modal-discription">Дорогенька, я тобі бажаю<br>бути сміливою проживати<br>життя, про яке мріяла, хай<br>попереду буде багато<br>приємних вражень,<br>
+            коханих людей і нових<br>перемог(зверни увагу<br>бабуся на малюнку,<br>здається вона вміє<br>плавати, ні на що не<br>натякую), живи,
+            радій,<br>пробуй щось нове і ніколи<br>не втомляйся дивуватися і<br>насолоджуватися життям!</p>
+            <img class="icons-modal-1 animate__animated animate__rotateIn animate__infinite	 animate__slower 2s" src="./imadge/tabletca-1.svg" alt="tabletca" width="50" height="50"></img>
+            <img class="icons-modal-2 animate__animated animate__rotateIn animate__infinite	 animate__slower 2s" src="./imadge/tabletca-2.svg" alt="tabletca" width="30" height="30"></img>
+            <img class="icons-modal-3 animate__animated animate__rotateIn animate__infinite	 animate__slower 2s" src="./imadge/tabletca-3.svg" alt="tabletca" width="40" height="40"></img>
+            <button type="button" class="btn-modal animate__animated animate__pulse animate__infinite animate__slower" data-modal-open2 >PUSH</button>
 
         </div>
 
